# DoWorker

./: .bazelignore  .bazelrc.local.example  .dockerignore  .gitignore  AGENTS.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  NOTICE  README.md  buf.amesh.gen.yaml  buf.amesh.yaml  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
agentfile/capability/: BUILD.bazel  axis.go  axis_test.go  calibrate.go  scan.go  scan_test.go
agentfile/schema/: BUILD.bazel  configfile.go  schema.go  schema_test.go
backend/internal/api/rest/: BUILD.bazel  agent_workbench_wiring.go  jwks_route.go  jwks_route_test.go  router.go  router_sessions.go
backend/internal/domain/agentsession/: BUILD.bazel  mcp_goal.go  provision.go  session.go
backend/internal/domain/aimodel/: BUILD.bazel  harness_env.go  harness_env_test.go  harness_mount.go  model.go  repository.go  settings.go  settings_test.go
backend/internal/domain/conversationitem/: BUILD.bazel  item.go
backend/internal/domain/coordinator/: BUILD.bazel  claim_policy.go  claim_policy_test.go  execution.go  external_link.go  hooks.go  hooks_test.go  project.go  repository.go
backend/internal/domain/expert/: BUILD.bazel  expert.go  market_source_test.go
backend/internal/domain/extension/: BUILD.bazel  installed_skill.go  models_skill_test.go  (+2 more)
build_defs/: BUILD.bazel
build_defs/go/: golangci_lint.bzl  golangci_lint_runner.sh
build_defs/rust/: BUILD.bazel  wasm.bzl
build_defs/web/: BUILD.bazel  internal_package.bzl  next.bzl
clients/core/: Cargo.toml
clients/core/pkg/: agentsmesh_wasm.d.ts  agentsmesh_wasm.js  agentsmesh_wasm_bg.wasm.d.ts
deploy/dev/: .gitignore  BUILD.bazel  README.md  backend_air_watch_contract_test.sh  backend_runtime_env_contract_test.sh  build-host-go-binary.sh  build_do_agent_checkout_test.sh  config_gen_registry_contract_test.sh  coordinator_runner_cli_contract_test.sh  dev-lite.sh  dev.sh  docker-compose.runners.yml  docker-compose.yml  ensure_coordinator_runner.sh  generate-dev-certs.sh  gitea_init_contract_test.sh  gitea_init_json_contract_test.sh  hive_smoke.sh  host_binary_signing_contract_test.sh  host_services_codegen_contract_test.sh  init-seed.sh  loopback_port_conflict_contract_test.sh  marketplace_host_contract_test.sh  relay_air_watch_contract_test.sh  run-backend-with-runtime-env.sh  runner-entrypoint.sh  runner-ssh-bootstrap.sh  runner.Dockerfile  runner_cert_refresh_contract_test.sh  runner_config_path_contract_test.sh  runner_runtime_contract_test.sh  runner_sidecar_staging_contract_test.sh  runners_launcher_argument_contract_test.sh  rust_proto_stub_cache_contract_test.sh  seed_runner_registration_contract_test.sh  session_compat_smoke.sh  traefik_proxy_contract_test.sh  wait_e2e_echo_runners_online.sh  wasm_freshness_contract_test.sh  web_env_port_contract_test.sh  (+2 more)
deploy/dev/air/: backend.toml  marketplace.toml  relay.toml
deploy/dev/gitea/: init-gitea.sh
deploy/dev/lib/: bootstrap.sh  build_do_agent_binary.sh  config_gen.sh  coordinator_runners.sh  doctor.sh  generate_runners_k8s_manifest.sh  host_services.sh  host_services_lite.sh  lifecycle.sh  lifecycle_frontends.sh  lifecycle_launch.sh  lifecycle_wasm.sh  lifecycle_web_user.sh  runners_k8s.sh  worker_runtime_catalog.sh  worktree.sh
deploy/dev/runner-ssh/: README.md  config
deploy/dev/scripts/: audit-deps-and-api.sh  gomoku_admin_do_agent.py  gomoku_do_agent_only.py  gomoku_real_e2e.py  l1_e2e_proof.py  seed-model-pool-from-local.py  verify-codex-pipeline.sh
deploy/dev/seed/: e2e_echo.sql  seed.sql  seed_lemonsqueezy.sql
docker/agent-runtime/: BUILD.bazel  Dockerfile  bazel_run.sh  build.sh  build_extension_contract_test.sh  contract_test.sh  do-agent-release.json  do_agent_release_manifest.sh  minimax-cli-wrapper.sh  no_mock_binary_contract_test.sh  prepare_binaries.sh  stage_do_agent_binary.sh  stage_do_agent_binary_contract_test.sh  video_contract_test.sh
proto/knowledgebase/v1/: BUILD.bazel  knowledgebase.proto
relay/internal/proxy/: BUILD.bazel  headers.go  headers_test.go  http.go  http_test.go  metrics_test.go  response.go  websocket.go  websocket_origin.go  websocket_origin_test.go  websocket_reauthorization.go
relay/internal/server/: BUILD.bazel  handler.go  handler_preview.go  handler_preview_auth.go  handler_preview_route.go  handler_preview_session.go  handler_preview_test.go  handler_runner.go  handler_test.go  handler_tunnel.go  handler_tunnel_test.go  prefix_test.go  preview_dependencies.go  preview_e2e_test.go  preview_query.go  preview_range_test.go  preview_request_test.go  preview_session_cookie.go  preview_session_cookie_test.go  preview_sse_test.go  preview_ws_test.go  server.go  server_lifecycle_test.go  server_test.go  server_tls_cert_test.go  server_tls_test.go
relay/internal/tunnel/: BUILD.bazel  limits.go  limits_test.go  registry.go  registry_test.go  stream.go  stream_test.go  tunnel.go  tunnel_test.go
runner/internal/policy/: BUILD.bazel  eval.go  eval_test.go
runner/internal/tunnel/: BUILD.bazel  client.go  client_generation_test.go  client_lifecycle.go  client_read.go  client_reconnect.go  client_reconnect_test.go  client_test.go  credit.go  dispatcher.go  local_http.go  local_http_test.go
runner/internal/tunnelframe/: BUILD.bazel  frame.go  frame_test.go
tests/mcp-e2e/suites/: BUILD.bazel  binding_cross_user_test.go  binding_test.go  block_crud_test.go  block_errors_test.go  block_query_test.go  block_text_field_test.go  channel_rich_test.go  channel_test.go  concurrency_test.go  cross_org_test.go  cross_runner_test.go  discovery_test.go  indicator_trigger_test.go  loop_real_test.go  loop_test.go  memory_filters_test.go  memory_test.go  pagination_test.go  parameter_variants_test.go  pod_acp_interaction_test.go  pod_interaction_test.go  pod_test.go  protocol_oversized_test.go  protocol_test.go  ticket_content_test.go  ticket_test.go  trigger_fire_test.go  trigger_webhook_test.go  workflow_real_test.go  workflow_resource_test.go  workflow_test.go  workspace_test.go
tools/crosscc/: BUILD.bazel  cc_toolchain_config.bzl
(+7881 files in other folders)
