load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "capability",
    srcs = [
        "axis.go",
        "calibrate.go",
        "scan.go",
    ],
    importpath = "github.com/anthropics/agentsmesh/agentfile/capability",
    visibility = ["//visibility:public"],
)

go_test(
    name = "capability_test",
    srcs = [
        "axis_test.go",
        "scan_test.go",
    ],
    embed = [":capability"],
    deps = ["@com_github_stretchr_testify//require"],
)

alias(
    name = "go_default_library",
    actual = ":capability",
    visibility = ["//visibility:public"],
)
