load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "schema",
    srcs = [
        "configfile.go",
        "schema.go",
    ],
    importpath = "github.com/anthropics/agentsmesh/agentfile/schema",
    visibility = ["//visibility:public"],
    deps = [
        "//agentfile/extract",
        "//agentfile/parser",
    ],
)

go_test(
    name = "schema_test",
    srcs = ["schema_test.go"],
    embed = [":schema"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

alias(
    name = "go_default_library",
    actual = ":schema",
    visibility = ["//visibility:public"],
)
