# Agent-runtime Docker images: runner daemon + one pre-installed AI CLI per image.
#
#   bazel run //docker/agent-runtime:build_all
#   bazel run //docker/agent-runtime:build_claude_code
#   bazel run //docker/agent-runtime:build_codex_cli
#   bazel run //docker/agent-runtime:build_gemini_cli

exports_files(
    ["Dockerfile"],
    visibility = ["//visibility:public"],
)

AGENT_RUNTIMES = [
    "claude-code",
    "codex-cli",
    "gemini-cli",
    "aider",
    "opencode",
    "loopal",
    "do-agent",
]

_RUNTIME_DATA = [
    "Dockerfile",
    "build.sh",
    "prepare_binaries.sh",
    "//deploy/dev:runner-entrypoint.sh",
    "//deploy/dev:lib/build_do_agent_binary.sh",
    "//deploy/dev:docker-compose.runners.yml",
]

sh_binary(
    name = "build_all",
    srcs = ["bazel_run.sh"],
    args = ["all"],
    data = _RUNTIME_DATA,
    visibility = ["//visibility:public"],
)

[
    sh_binary(
        name = "build_" + rt.replace("-", "_"),
        srcs = ["bazel_run.sh"],
        args = [rt],
        data = _RUNTIME_DATA,
        visibility = ["//visibility:public"],
    )
    for rt in AGENT_RUNTIMES
]

sh_test(
    name = "contract_test",
    srcs = ["contract_test.sh"],
    data = [
        "Dockerfile",
        "build.sh",
        "prepare_binaries.sh",
        "//deploy/dev:docker-compose.runners.yml",
        "//deploy/dev:runner-entrypoint.sh",
    ],
)
