load("@rules_cc//cc:defs.bzl", "cc_toolchain")
load(":cc_toolchain_config.bzl", "cc_toolchain_config")

package(default_visibility = ["//visibility:public"])

filegroup(name = "empty")

cc_toolchain_config(name = "stub_config")

cc_toolchain(
    name = "stub_cc",
    all_files = ":empty",
    ar_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    toolchain_config = ":stub_config",
)

# Resolution-only: matches the linux/amd64 *target* so cross builds resolve a
# CC toolchain, but is never invoked (Go built pure; no rust in image graph).
toolchain(
    name = "stub_cc_linux_amd64",
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":stub_cc",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
