load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library", "rust_prost_transform")

rust_prost_transform(
    name = "knowledgebase_serde_transform",
    prost_opts = [
        "type_attribute=.=#[derive(serde::Serialize\\, serde::Deserialize)]",
        "type_attribute=.=#[serde(default)]",
    ],
    deps = ["@crates//:serde"],
)

proto_library(
    name = "knowledgebase_proto",
    srcs = ["knowledgebase.proto"],
    data = [":knowledgebase_serde_transform"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "knowledgebase_go_proto",
    compilers = ["@rules_go//proto:go_proto"],
    importpath = "github.com/anthropics/agentsmesh/proto/gen/go/knowledgebase/v1",
    proto = ":knowledgebase_proto",
    visibility = ["//visibility:public"],
)

rust_prost_library(
    name = "knowledgebase_rust_proto",
    proto = ":knowledgebase_proto",
    visibility = ["//visibility:public"],
)
