load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "proxy",
    srcs = [
        "headers.go",
    ],
    importpath = "github.com/anthropics/agentsmesh/relay/internal/proxy",
    visibility = ["//relay:__subpackages__"],
)

alias(
    name = "go_default_library",
    actual = ":proxy",
    visibility = ["//relay:__subpackages__"],
)

go_test(
    name = "proxy_test",
    srcs = [
        "headers_test.go",
    ],
    embed = [":proxy"],
)
