load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "proxy",
    srcs = [
        "headers.go",
        "http.go",
    ],
    importpath = "github.com/anthropics/agentsmesh/relay/internal/proxy",
    visibility = ["//relay:__subpackages__"],
    deps = [
        "//relay/internal/protocol/tunnelframe",
        "//relay/internal/tunnel",
    ],
)

alias(
    name = "go_default_library",
    actual = ":proxy",
    visibility = ["//relay:__subpackages__"],
)

go_test(
    name = "proxy_test",
    srcs = [
        "headers_test.go",
        "http_test.go",
    ],
    embed = [":proxy"],
    deps = [
        "//relay/internal/protocol/tunnelframe",
        "//relay/internal/tunnel",
    ],
)
