load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "proxy",
    srcs = [
        "headers.go",
        "http.go",
        "websocket.go",
    ],
    importpath = "github.com/anthropics/agentsmesh/relay/internal/proxy",
    visibility = ["//relay:__subpackages__"],
    deps = [
        "//relay/internal/otel",
        "//relay/internal/protocol/tunnelframe",
        "//relay/internal/tunnel",
        "@com_github_gorilla_websocket//:websocket",
    ],
)

alias(
    name = "go_default_library",
    actual = ":proxy",
    visibility = ["//relay:__subpackages__"],
)

go_test(
    name = "proxy_test",
    srcs = [
        "headers_test.go",
        "http_test.go",
        "metrics_test.go",
    ],
    embed = [":proxy"],
    deps = [
        "//relay/internal/protocol/tunnelframe",
        "//relay/internal/tunnel",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_sdk_metric//:metric",
        "@io_opentelemetry_go_otel_sdk_metric//metricdata",
    ],
)
