load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = [
        "handler.go",
        "handler_preview.go",
        "handler_preview_session.go",
        "handler_tunnel.go",
        "server.go",
    ],
    importpath = "github.com/anthropics/agentsmesh/relay/internal/server",
    visibility = ["//relay:__subpackages__"],
    deps = [
        "//relay/internal/auth",
        "//relay/internal/backend",
        "//relay/internal/channel",
        "//relay/internal/config",
        "//relay/internal/otel",
        "//relay/internal/protocol/tunnelframe",
        "//relay/internal/proxy",
        "//relay/internal/tunnel",
        "@com_github_google_uuid//:uuid",
        "@com_github_gorilla_websocket//:websocket",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
    ],
)

alias(
    name = "go_default_library",
    actual = ":server",
    visibility = ["//relay:__subpackages__"],
)

go_test(
    name = "server_test",
    srcs = [
        "handler_preview_test.go",
        "handler_test.go",
        "handler_tunnel_test.go",
        "server_lifecycle_test.go",
        "server_test.go",
        "server_tls_cert_test.go",
        "server_tls_test.go",
    ],
    embed = [":server"],
    deps = [
        "//relay/internal/auth",
        "//relay/internal/channel",
        "//relay/internal/config",
        "//relay/internal/protocol/tunnelframe",
        "//relay/internal/tunnel",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@com_github_gorilla_websocket//:websocket",
    ],
)
