load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tunnel",
    srcs = [
        "stream.go",
        "tunnel.go",
    ],
    importpath = "github.com/anthropics/agentsmesh/relay/internal/tunnel",
    visibility = ["//relay:__subpackages__"],
    deps = [
        "//relay/internal/protocol/tunnelframe",
        "@com_github_gorilla_websocket//:websocket",
    ],
)

alias(
    name = "go_default_library",
    actual = ":tunnel",
    visibility = ["//relay:__subpackages__"],
)

go_test(
    name = "tunnel_test",
    srcs = [
        "stream_test.go",
        "tunnel_test.go",
    ],
    embed = [":tunnel"],
    deps = [
        "//relay/internal/protocol/tunnelframe",
    ],
)
