load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "policy",
    srcs = ["eval.go"],
    importpath = "github.com/anthropics/agentsmesh/runner/internal/policy",
    visibility = ["//runner:__subpackages__"],
)

go_test(
    name = "policy_test",
    srcs = ["eval_test.go"],
    embed = [":policy"],
)

alias(
    name = "go_default_library",
    actual = ":policy",
    visibility = ["//runner:__subpackages__"],
)
