load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "tunnelframe",
    srcs = ["frame.go"],
    importpath = "github.com/anthropics/agentsmesh/runner/internal/tunnelframe",
    visibility = ["//runner:__subpackages__"],
)

alias(
    name = "go_default_library",
    actual = ":tunnelframe",
    visibility = ["//runner:__subpackages__"],
)
