load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "agentsession",
    srcs = [
        "mcp_goal.go",
        "session.go",
    ],
    importpath = "github.com/anthropics/agentsmesh/backend/internal/domain/agentsession",
    visibility = ["//backend:__subpackages__"],
)

alias(
    name = "go_default_library",
    actual = ":agentsession",
    visibility = ["//backend:__subpackages__"],
)
