load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "aimodel",
    srcs = [
        "harness_env.go",
        "harness_mount.go",
        "model.go",
        "repository.go",
        "settings.go",
    ],
    importpath = "github.com/anthropics/agentsmesh/backend/internal/domain/aimodel",
    visibility = ["//backend:__subpackages__"],
)

alias(
    name = "go_default_library",
    actual = ":aimodel",
    visibility = ["//backend:__subpackages__"],
)

go_test(
    name = "aimodel_test",
    srcs = [
        "harness_env_test.go",
        "settings_test.go",
    ],
    embed = [":aimodel"],
    deps = ["@com_github_stretchr_testify//assert"],
)
