load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "conversationitem",
    srcs = ["item.go"],
    importpath = "github.com/anthropics/agentsmesh/backend/internal/domain/conversationitem",
    visibility = ["//backend:__subpackages__"],
)

alias(
    name = "go_default_library",
    actual = ":conversationitem",
    visibility = ["//backend:__subpackages__"],
)
