load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "sessioncomment",
    srcs = ["comment.go"],
    importpath = "github.com/anthropics/agentsmesh/backend/internal/domain/sessioncomment",
    visibility = ["//backend:__subpackages__"],
)

alias(
    name = "go_default_library",
    actual = ":sessioncomment",
    visibility = ["//backend:__subpackages__"],
)
