load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "sessionfile",
    srcs = ["file.go"],
    importpath = "github.com/anthropics/agentsmesh/backend/internal/domain/sessionfile",
    visibility = ["//backend:__subpackages__"],
)

alias(
    name = "go_default_library",
    actual = ":sessionfile",
    visibility = ["//backend:__subpackages__"],
)
