load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "skill",
    srcs = ["skill.go"],
    importpath = "github.com/anthropics/agentsmesh/backend/internal/domain/skill",
    visibility = ["//backend:__subpackages__"],
)

alias(
    name = "go_default_library",
    actual = ":skill",
    visibility = ["//backend:__subpackages__"],
)
